# streamlit-aggrid

./: .gitignore  AG_UPDATE_CHANGES.md  AG_UPDATE_SCOPE.md  CLAUDE.md  README.md  REQUIREMENT-group-dimension-notes.md  example.py  package.json  pyproject.toml  requirements.txt  setup.py
docs/superpowers/plans/: 2026-04-10-uv-migration.md
docs/superpowers/specs/: 2026-04-10-uv-migration-design.md
examples/: quick_example.py
st_aggrid/: AgGrid.py  AgGridReturn.py  __init__.py  aggrid.py  aggrid_utils.py  column_state.py  component.py  google_sheets_export.py  grid_options_builder.py  result.py  shared.py
st_aggrid/frontend/: package.json  tsconfig.json  vite.config.ts
st_aggrid/frontend/config/: webpack.config.js
st_aggrid/frontend/src/: AgGrid.css  AgGrid.tsx  AgGridComponent.tsx  ThemeParser.tsx  googleSheets.ts  googleSheets.tsx  googleSheetsService.tsx  index.tsx  utils.ts
test/: grid_35_3_features.py  grid_data_render.py  grid_drag_and_drop_example.py  grid_initialization.py  grid_performance_1m.py  grid_return.py  grid_rowgroup.py  grid_rowgroup_interactive.py  grid_rowgroup_order.py  grid_saved_view.py  grid_sort_persist.py  grid_state_visibility.py  grid_state_visibility_pivot.py  test_column_state.py  test_grid_35_3_features.py  test_grid_data_render.py  test_grid_drag_and_drop_example.py  test_grid_initialization.py  test_grid_performance.py  test_grid_return.py  test_grid_rowgroup.py  test_grid_rowgroup_interactive.py  test_grid_rowgroup_order.py  test_grid_saved_view.py  test_grid_sort_persist.py  test_grid_state_visibility.py  test_grid_state_visibility_pivot.py
(+9 files in other folders)
