[project]
name = "streamlit-aggrid"
version = "2.0.2"
description = "Streamlit component implementation of ag-grid (CCv2, no iframe)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pablo Fonseca", email = "pablo.fonseca+pip@gmail.com" }]
keywords = ["streamlit", "ag-grid", "component"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["streamlit >=1.44.0", "pandas >=1.4.0"]

[project.urls]
homepage = "https://github.com/PablocFonseca/streamlit-aggrid"

[dependency-groups]
dev = [
    "bs4 >=0.0.2",
    "playwright >=1.51.0",
    "pytest >=8.3.5",
    "pytest-playwright >=0.7.0",
    "watchdog >=6.0.0",
    "ruff",
    "streamlit-code-editor >=0.1.12",
    "pytest-cov >=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
exclude = [
    "st_aggrid/frontend/src",
    "st_aggrid/frontend/package.json",
    "st_aggrid/frontend/tsconfig.json",
    "st_aggrid/frontend/vite.config.ts",
    "st_aggrid/frontend/.prettierrc",
]

[tool.hatch.build.targets.wheel]
only-include = ["st_aggrid"]

[tool.hatch.build.targets.sdist]
only-include = ["st_aggrid", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: long-running performance tests (1M-row grid); excluded by default, run with -m slow",
]
